--- a/main.html
+++ b/main.html
@@ -4,10 +4,38 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		li{
+			display: inline;
+		}
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<nav>
+			<ul>
+				<li><a href="https://navi.com/">Home</a></li>
+				<li><a href="https://navi.com/blog/">About us</a></li>
+				<li><a href="https://navi.com/mutual-fund">Contact us</a></li>
+			</ul>
+		</nav>
+	</div>
+	<div>
+		<h1>3 random videos</h1>
+		<video width="320" height="240" controls>
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"  type="video/mp4">
+		</video>
+
+		<video width="320" height="240" controls>
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4"  type="video/mp4">
+		</video>
+
+		<video width="320" height="240" controls>
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"  type="video/mp4">
+		</video>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
